--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,5 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
       - NVIDIA_DRIVER_CAPABILITIES=all
     command: bash -c "
-      cd demo
-      && python3 -u object_detections_EAM.py
+      python3 -u object_detections_EAM.py
       "
