--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,16 @@ version: "3"
 services:
   eam:
     build: .
-    ports:
-      - "4567:4567"
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
     image: "docker_eam:latest"
+    network_mode: "host"
     runtime: nvidia
     environment:
-      - IP_KAFKA=195.251.117.126
-      - PORT_KAFKA=9091
-      - SERVER_IPS=192.168.43.47
-      - SERVER_PORTS=4567
+      - IP_KAFKA=intrepid01.diginext.fr
+      - PORT_KAFKA=9092
+      - SERVER_IPS=192.168.100.30
+      - SERVER_PORTS=23098
       - NVIDIA_VISIBLE_DEVICES=all
       - DISPLAY=$DISPLAY
       - NVIDIA_DRIVER_CAPABILITIES=all
