--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,8 @@ pyparsing==2.4.7
 python-dateutil==2.8.2
 PyYAML==5.4.1
 six==1.16.0
-torch==1.1.0
-torchvision==0.3.0
+#torch==1.1.0
+#torchvision==0.3.0
 tqdm==4.62.2
 yacs==0.1.8
 scipy
